--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
+  <body>
+    <!-- the entire body must be written by student -->
+	<div class="holder">
+		<div>1</div>
+		<div>2</div>
+	</div>
     <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+    </script>
+  </body>
 </html>
